--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,11 @@ node_js:
   - v8
   - v6
   - v4
+
+before_install:
+- npm i
+
+script:
+- npm run test
+
 after_script: cat ./coverage/lcov.info | coveralls
